--- a/Assignment16/Assignment16.ipynb
+++ b/Assignment16/Assignment16.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f318a18",
+   "id": "d8f9d471",
    "metadata": {},
    "source": [
     "# Create a list called years_list, starting with the year of your birth, and each year thereafter until the year of your fifth birthday. For example, if you were born in 1980. the list would be years_list = [1980, 1981, 1982, 1983, 1984, 1985]."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0cce9aad",
+   "id": "a6b6836d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdf75722",
+   "id": "6c31ba61",
    "metadata": {},
    "source": [
     "# 2. In which year in years_list was your third birthday? Remember, you were 0 years of age for your first year."
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "137a85c1",
+   "id": "5c6f0d21",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95eb1d36",
+   "id": "3dceefeb",
    "metadata": {},
    "source": [
     "# 3.In the years list, which year were you the oldest?"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "cb0ff8e1",
+   "id": "c1017ffb",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3ca6908",
+   "id": "576d3a39",
    "metadata": {},
    "source": [
     "# 4. Make a list called things with these three strings as elements: \"mozzarella\", \"cinderella\", \"salmonella\"."
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0856afc9",
+   "id": "07568042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dd4c1257",
+   "id": "77cb398a",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "097ccf4b",
+   "id": "576d9804",
    "metadata": {},
    "source": [
     "# 5. Capitalize the element in things that refers to a person and then print the list. Did it change the element in the list?"
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dfe3520a",
+   "id": "ba95b07f",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "117af7f1",
+   "id": "1cf09c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "99707c20",
+   "id": "33959a7f",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f175190",
+   "id": "a5ef3083",
    "metadata": {},
    "source": [
     "# 6. Make a surprise list with the elements \"Groucho,\" \"Chico,\" and \"Harpo.\""
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3140dbea",
+   "id": "0d52a895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a56b4904",
+   "id": "788a7826",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db0e4b8b",
+   "id": "59ae374b",
    "metadata": {},
    "source": [
     "# 7. Lowercase the last element of the surprise list, reverse it, and then capitalize it."
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "deac0f11",
+   "id": "04edd341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4e19ba3e",
+   "id": "cd4f0b6b",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "872b6e74",
+   "id": "3f832e5c",
    "metadata": {},
    "source": [
     "# 8. Make an English-to-French dictionary called e2f and print it. Here are your starter words: dog is chien, cat is chat, and walrus is morse."
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "91d7fc89",
+   "id": "286683b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8b978505",
+   "id": "fa5fb30f",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571bcfc1",
+   "id": "bd393036",
    "metadata": {},
    "source": [
     "# 9. Write the French word for walrus in your three-word dictionary e2f."
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "75daa8f6",
+   "id": "be8452ec",
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "667a3977",
+   "id": "35c964dd",
    "metadata": {},
    "source": [
     "# 10. Make a French-to-English dictionary called f2e from e2f. Use the items method."
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ee1b083e",
+   "id": "129aef23",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03749ca0",
+   "id": "a51caf28",
    "metadata": {},
    "source": [
     "# 11. Print the English version of the French word chien using f2e."
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f1c006b4",
+   "id": "26e30b5b",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e4ed3ae",
+   "id": "d63ecb74",
    "metadata": {},
    "source": [
     "# 12. Make and print a set of English words from the keys in e2f."
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "481f59c8",
+   "id": "dd7e99da",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e03b4917",
+   "id": "9cbb6c37",
    "metadata": {},
    "source": [
     "# 13. Make a multilevel dictionary called life. Use these strings for the topmost keys: 'animals', 'plants', and 'other'. Make the 'animals' key refer to another dictionary with the keys 'cats', 'octopi', and 'emus'. Make the 'cats' key refer to a list of strings with the values 'Henri', 'Grumpy', and 'Lucy'. Make all the other keys refer to empty dictionaries."
@@ -419,25 +419,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "e7beba68",
+   "execution_count": 39,
+   "id": "f75cd924",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'animals': {'cat': ['Henri', 'Grumpy', 'Lucy'], 'octopi': '', 'emus': ''},\n",
+       "{'animals': {'cats': ['Henri', 'Grumpy', 'Lucy'], 'octopi': '', 'emus': ''},\n",
        " 'plants': '',\n",
        " 'other': ''}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "life ={'animals':{'cat':['Henri', 'Grumpy', 'Lucy'], 'octopi':'', 'emus':''},\n",
+    "life ={'animals':{'cats':['Henri', 'Grumpy', 'Lucy'], 'octopi':'', 'emus':''},\n",
     "       'plants' :'',\n",
     "       'other' :'' }\n",
     "life"
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6404893b",
+   "id": "46a06585",
    "metadata": {},
    "source": [
     "# 14. Print the top-level keys of life."
@@ -453,8 +453,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "fad981ef",
+   "execution_count": 40,
+   "id": "788ceba2",
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "dict_keys(['animals', 'plants', 'other'])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46498793",
+   "id": "962139f8",
    "metadata": {},
    "source": [
     "# 15. Print the keys for life['animals']."
@@ -482,17 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "c7924bba",
+   "execution_count": 41,
+   "id": "4d972083",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['cat', 'octopi', 'emus'])"
+       "dict_keys(['cats', 'octopi', 'emus'])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7a35f7f",
+   "id": "2db65a80",
    "metadata": {},
    "source": [
     "# 16. Print the values for life['animals']['cats']"
@@ -511,20 +511,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "2e335746",
+   "execution_count": 42,
+   "id": "37f9f47b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'cats'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [37]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mlife\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43manimals\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcats\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'cats'"
-     ]
+     "data": {
+      "text/plain": [
+       "['Henri', 'Grumpy', 'Lucy']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -534,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c57ad55a",
+   "id": "2b68a35d",
    "metadata": {},
    "outputs": [],
    "source": []
