--- a/Assignment19/Assignment19.ipynb
+++ b/Assignment19/Assignment19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "11200460",
+   "id": "cf099ebc",
    "metadata": {},
    "source": [
     "# 1. Make a class called Thing with no contents and print it. Then, create an object called example from this class and also print it. Are the printed values the same or different?"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a00ee2c4",
+   "id": "bc16b76d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a2697557",
+   "id": "b854536b",
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9c5894e6",
+   "id": "bd84b5c3",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bfe8ac23",
+   "id": "5cad51a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08bd3a88",
+   "id": "18c2f1ca",
    "metadata": {},
    "source": [
     "# 2. Create a new class called Thing2 and add the value 'abc' to the letters class attribute. Letters should be printed."
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e714a0e0",
+   "id": "f40a6afa",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fa047bf",
+   "id": "c48ee372",
    "metadata": {},
    "source": [
     "# 3. Make yet another class called, of course, Thing3. This time, assign the value 'xyz' to an instance (object) attribute called letters. Print letters. Do you need to make an object from the class to do this?"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "522896fd",
+   "id": "d70bfe89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3c4e7b5a",
+   "id": "03c80348",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b7002283",
+   "id": "796b5091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c87f12",
+   "id": "d6ce637a",
    "metadata": {},
    "source": [
     "# 4. Create an Element class with the instance attributes name, symbol, and number. Create a class object with the values 'Hydrogen,' 'H,' and 1."
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "91414534",
+   "id": "47716100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "d3687117",
+   "id": "6ac0f4c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5ffa91c8",
+   "id": "4613eb4b",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d00de4",
+   "id": "b5986f9d",
    "metadata": {},
    "source": [
     "# 5. Make a dictionary with these keys and values: 'name': 'Hydrogen', 'symbol': 'H', 'number': 1. Then, create an object called hydrogen from class Element using this dictionary."
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "41837932",
+   "id": "d9304bdf",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f913cd49",
+   "id": "fea51245",
    "metadata": {},
    "source": [
     "# 6. For the Element class, define a method called dump() that prints the values of the object’s attributes (name, symbol, and number). Create the hydrogen object from this new definition and use dump() to print its attributes."
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "02468c74",
+   "id": "0139978e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2009acc0",
+   "id": "4576f526",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57a0225c",
+   "id": "185b81f6",
    "metadata": {},
    "source": [
     "# 7. Call print(hydrogen). In the definition of Element, change the name of method dump to __str__, create a new hydrogen object, and call print(hydrogen) again."
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2d1ee8f8",
+   "id": "ebc0e3cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "2f56769e",
+   "id": "20d6adea",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe547439",
+   "id": "3dd14faf",
    "metadata": {},
    "source": [
     "# 8. Modify Element to make the attributes name, symbol, and number private. Define a getter property for each to return its value."
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "872438e3",
+   "id": "8a20fb1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "dce2623c",
+   "id": "1b54da1a",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f96892fa",
+   "id": "69f4cce9",
    "metadata": {},
    "source": [
     "# 9. Define three classes: Bear, Rabbit, and Octothorpe. For each, define only one method: eats(). This should return 'berries' (Bear), 'clover' (Rabbit), or 'campers' (Octothorpe). Create one object from each and print what it eats."
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "42cb8478",
+   "id": "fc48e645",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "526bcc7d",
+   "id": "d98ae4b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f49d6d53",
+   "id": "d9975c11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "25b32d93",
+   "id": "fd7d2a2e",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "51e872b5",
+   "id": "bb8ecb19",
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9d6fd3eb",
+   "id": "771222b9",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2873eb5",
+   "id": "1598683b",
    "metadata": {},
    "source": [
     "# 10. Define these classes: Laser, Claw, and SmartPhone. Each has only one method: does(). This returns 'disintegrate' (Laser), 'crush' (Claw), or 'ring' (SmartPhone). Then, define the class Robot that has one instance (object) of each of these. Define a does() method for the Robot that prints what its component objects do.\n"
@@ -484,8 +484,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6ee543ab",
+   "execution_count": 44,
+   "id": "68229ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,6 +500,59 @@
     "        return('ring')\n",
     " "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1c39e1bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "       \n",
+    "class Robot:\n",
+    "    def __init__(self):\n",
+    "        self.laser = Laser()\n",
+    "        self.claw = Claw()\n",
+    "        self.smartphone = SmartPhone()\n",
+    "    def does(self):\n",
+    "        print(f'Laser is {self.laser.does()}, Claw is {self.claw.does()}, SmartPhone is {self.smartphone.does()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "12836ec3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chitty = Robot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "007c7125",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Laser is disitegrate, Claw is crush, SmartPhone is ring\n"
+     ]
+    }
+   ],
+   "source": [
+    "chitty.does()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7c101a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
