--- a/Assignment20/Assignement20.ipynb
+++ b/Assignment20/Assignement20.ipynb
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5effb91f",
+   "id": "0ec83e66",
    "metadata": {},
    "source": [
     "# 10. Increment the count field of test and print it."
@@ -434,8 +434,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "e13be3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.hincrby('test','count', 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2221c96f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{b'count': b'2', b'name': b'Fester Bestertester'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn.hgetall('test')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "50faa37c",
+   "id": "6d93746e",
    "metadata": {},
    "outputs": [],
    "source": []
