--- a/Assignment21/Untitled.ipynb
+++ b/Assignment21/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "539e5c35",
+   "id": "5a318d2d",
    "metadata": {},
    "source": [
     "# 1. Add the current date to the text file today.txt as a string."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cdf8eb86",
+   "id": "0ed68d75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e243ef8f",
+   "id": "a68d555b",
    "metadata": {},
    "source": [
     "# 2. Read the text file today.txt into the string today_string"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "93e9523b",
+   "id": "6a3c5f8c",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333db211",
+   "id": "d5e0dfef",
    "metadata": {},
    "source": [
     "# 3. Parse the date from today_string."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "dc2f500b",
+   "id": "e73742bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f2fb5dd5",
+   "id": "a64edcff",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f62b998",
+   "id": "49545140",
    "metadata": {},
    "source": [
     "# 4. List the files in your current directory"
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca07862d",
+   "id": "c63b10eb",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bafb5f6",
+   "id": "52f4ffe0",
    "metadata": {},
    "source": [
     "# 5. Create a list of all of the files in your parent directory (minimum five files should be available)."
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ea7e7887",
+   "id": "056a2e0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6b905793",
+   "id": "4d4101ab",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dbfda76",
+   "id": "1287cf87",
    "metadata": {},
    "source": [
     "# 6. Use multiprocessing to create three separate processes. Make each one wait a random number of seconds between one and five, print the current time, and then exit."
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7d89a672",
+   "id": "2c93c7ef",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6769aeb0",
+   "id": "9572f266",
    "metadata": {},
    "source": [
     "# 7. Create a date object of your day of birth."
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "818c5e1c",
+   "id": "3ae50f25",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b1bfd83",
+   "id": "851b4c3f",
    "metadata": {},
    "source": [
     "# 8. What day of the week was your day of birth?"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cd4b0d33",
+   "id": "a5c91ed5",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0b5382",
+   "id": "80c7eea8",
    "metadata": {},
    "source": [
     "# 9. When will you be (or when were you) 10,000 days old?"
@@ -306,8 +306,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "c300663b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(2028, 3, 29)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import timedelta\n",
+    "old_1000 = dob + timedelta(days=10000)\n",
+    "old_1000"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5522285b",
+   "id": "ef34c423",
    "metadata": {},
    "outputs": [],
    "source": []
