--- a/Assignment_pgm_5/Assignment_pgm_5.ipynb
+++ b/Assignment_pgm_5/Assignment_pgm_5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "030160d2",
+   "id": "292616e8",
    "metadata": {},
    "source": [
     "# 1. Write a Python Program to Find LCM?"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b89324ab",
+   "id": "dbbf5e25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "55bf8c02",
+   "id": "92a20f0d",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cf425d4",
+   "id": "63b894fd",
    "metadata": {},
    "source": [
     "# 2. Write a Python Program to Find HCF?"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5fdcd09b",
+   "id": "2986f22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "83502382",
+   "id": "1beb5d29",
    "metadata": {},
    "outputs": [
     {
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01b0abec",
+   "id": "e34cb7d5",
    "metadata": {},
    "source": [
-    "# Write a Python Program to Convert Decimal to Binary, Octal and Hexadecimal?"
+    "# 3 Write a Python Program to Convert Decimal to Binary, Octal and Hexadecimal?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0904c502",
+   "id": "fd2ff03a",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fdb0ab9",
+   "id": "40a25314",
    "metadata": {},
    "source": [
     "# 4. Write a Python Program To Find ASCII value of a character?"
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "85cfc25f",
+   "id": "c8851d9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "25709ff2",
+   "id": "c073846f",
    "metadata": {},
    "outputs": [
     {
@@ -177,16 +177,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b729fa4",
+   "id": "01fcf052",
    "metadata": {},
    "source": [
-    "# 4. Write a Python Program to Make a Simple Calculator with 4 basic mathematical operations?"
+    "# 5. Write a Python Program to Make a Simple Calculator with 4 basic mathematical operations?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "79919220",
+   "id": "56d8c7df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "0a9edc1a",
+   "id": "ac595e32",
    "metadata": {},
    "outputs": [
     {
@@ -229,13 +229,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "066f7f36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc.sub(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "91bcfaa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc.divide(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9fc6fafd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc.multiplication(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5896256e",
+   "id": "bf988671",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "calc.sub"
-   ]
+   "source": []
   }
  ],
  "metadata": {
