--- a/Assignment_pgm_11/Assignment11.ipynb
+++ b/Assignment_pgm_11/Assignment11.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2a081b6",
+   "id": "a2cbeba3",
    "metadata": {},
    "source": [
     "# 1. Write a Python program to find words which are greater than given length k?"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "684a4a34",
+   "id": "04f15ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8a6c8a6e",
+   "id": "56e31e35",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbd111b4",
+   "id": "4b60cf94",
    "metadata": {},
    "source": [
     "# 2. Write a Python program for removing i-th character from a string?"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "41f0f60d",
+   "id": "1cf9b663",
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe87173",
+   "id": "bae24d11",
    "metadata": {},
    "source": [
     "# 3. Write a Python program to split and join a string?"
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "99d5f8b4",
+   "id": "fbd34c32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0430e0d7",
+   "id": "af81143e",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad2966d",
+   "id": "0ae8a2b5",
    "metadata": {},
    "source": [
     "# 4. write a Python to check if a given string is binary string or not?"
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c3ac56df",
+   "id": "3100e36a",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a70be4c6",
+   "id": "a8ae3512",
    "metadata": {},
    "source": [
     "# 5. Write a Python program to find uncommon words from two Strings?"
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cf7cdfa9",
+   "id": "293975d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7781f954",
+   "id": "f6248111",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "527c78d3",
+   "id": "b4a8f6f6",
    "metadata": {},
    "source": [
     "# 6. Write a Python to find all duplicate characters in string?"
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "968308bf",
+   "id": "9398b637",
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e724ff65",
+   "id": "443abd81",
    "metadata": {},
    "source": [
     "# 7. Write a Python Program to check if a string contains any special character?"
@@ -261,8 +261,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "a46fdb72",
+   "execution_count": 49,
+   "id": "0b0c92c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,22 +270,22 @@
     "def run(string):\n",
     "    regex = re.compile('[@_!#$%^&*()<>?/\\|}{~:]')\n",
     "    if(regex.search(string) == None):\n",
-    "        print(\"String has not any special characters\")\n",
+    "        print(\"String has no any special characters\")\n",
     "    else:\n",
     "        print(\"String  has special character\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "57bfeb2a",
+   "execution_count": 50,
+   "id": "f5ed04f2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "String has not any special characters\n"
+      "String has no any special characters\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1acef46f",
+   "id": "20a824cb",
    "metadata": {},
    "outputs": [],
    "source": []
