--- a/Assignment_pgm_12/Assignment12.ipynb
+++ b/Assignment_pgm_12/Assignment12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ad95e6dc",
+   "id": "029e5793",
    "metadata": {},
    "source": [
     "# 1. Write a Python program to Extract Unique values dictionary values?"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "34e62f3e",
+   "id": "63ceedd9",
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0921c2c6",
+   "id": "41c00edf",
    "metadata": {},
    "source": [
     "# 2. Write a Python program to find the sum of all items in a dictionary?"
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3abdc0ca",
+   "id": "7bca3251",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a99728be",
+   "id": "e323552e",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c59627d",
+   "id": "82b52ea9",
    "metadata": {},
    "source": [
     "# 3. Write a Python program to Merging two Dictionaries?"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a5e727f3",
+   "id": "00d9f0a6",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d11374",
+   "id": "eeb85dbb",
    "metadata": {},
    "source": [
     "# 4. Write a Python program to convert key-values list to flat dictionary?"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "bd264db8",
+   "id": "39aff9fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5bb425f0",
+   "id": "e4353521",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ff0dc8f",
+   "id": "bbfe5700",
    "metadata": {},
    "source": [
     "# 5. Write a Python program to insertion at the beginning in OrderedDict?"
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "db9d66cf",
+   "id": "b7e72811",
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e427ef23",
+   "id": "60251dd0",
    "metadata": {},
    "source": [
     "# 6. Write a Python program to check order of character in string using OrderedDict()?"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5f95a4c0",
+   "id": "d573fee3",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acafd1d8",
+   "id": "cceea76f",
    "metadata": {},
    "source": [
     "# 7. Write a Python program to sort Python Dictionaries by Key or Value?"
@@ -247,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "1dc56f27",
+   "execution_count": 37,
+   "id": "0028f435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,29 +260,37 @@
     "    key_value[4] = 24\n",
     "    key_value[6] = 18\n",
     "    key_value[3] = 323\n",
+    "    for i in sorted (key_value) :\n",
+    "        print ((i, key_value[i]), end =\" \")\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "id": "91ff0ea7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2) (2, 56) (3, 323) (4, 24) (5, 12) (6, 18) "
+     ]
+    }
+   ],
+   "source": [
+    "dictionairy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8c171a52",
+   "id": "fc678b4c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "for i in sorted (key_value) :\n",
-    "    print ((i, key_value[i]), end =\" \")\n",
-    "\n",
-    "def main():\n",
-    "\t# function calling\n",
-    "\t\n",
-    "\t\n",
-    "# main function calling\n",
-    "if __name__==\"__main__\":\t\n",
-    "\tmain()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
