--- a/Assignment_pgm_17/pgm17.ipynb
+++ b/Assignment_pgm_17/pgm17.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fab4cf48",
+   "id": "38e49802",
    "metadata": {},
    "source": [
     "#  Question1. Create a function that takes three arguments a, b, c and returns the sum of the numbers that are evenly divided by c from the range a, b inclusive.\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b0d24c2d",
+   "id": "bc4c92ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "70198ce5",
+   "id": "7f36e9b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "987ddbfd",
+   "id": "1b16802a",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1168f8d1",
+   "id": "3dc438f9",
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cd284a30",
+   "id": "0b3596d3",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c65698",
+   "id": "4525d4ee",
    "metadata": {},
    "source": [
     "# Question2. Create a function that returns True if a given inequality expression is correct and False otherwise.\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "aec6233c",
+   "id": "a6941350",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a1f6ef97",
+   "id": "2784c2b2",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "daf06447",
+   "id": "6e38cc9f",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "120e1c23",
+   "id": "4e8f42de",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d987780",
+   "id": "d994ec4a",
    "metadata": {},
    "source": [
     "# Question3. Create a function that replaces all the vowels in a string with a specified character.\n",
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "88b7e8c8",
+   "id": "6c946a3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2d0fa647",
+   "id": "9534cfed",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b4c744fc",
+   "id": "6e76f6b6",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "dc2c3ca3",
+   "id": "b5c53c30",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36a5ba13",
+   "id": "19a2fee3",
    "metadata": {},
    "source": [
     "# Question4. Write a function that calculates the factorial of a number recursively.\n",
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b8fed2b0",
+   "id": "3e999ac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "50e9ccbc",
+   "id": "d39a698e",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "21537b77",
+   "id": "d80f5488",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "56aa5d72",
+   "id": "6a27d1e4",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "5589b718",
+   "id": "8fbc703e",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2582e442",
+   "id": "48fe3b84",
    "metadata": {},
    "source": [
     "# Question 5\n",
@@ -432,8 +432,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "9b3baf78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hamming_distance(str1, str2):\n",
+    "    i = 0\n",
+    "    count = 0\n",
+    "\n",
+    "    while(i < len(str1)):\n",
+    "        if(str1[i] != str2[i]):\n",
+    "            count += 1\n",
+    "        i += 1\n",
+    "    return count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "0be234da",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamming_distance(\"abcde\", \"bcdef\") \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c02762e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamming_distance(\"abcde\", \"abcde\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "317cceec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamming_distance(\"strong\", \"strung\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "54763b4e",
+   "id": "328c0220",
    "metadata": {},
    "outputs": [],
    "source": []
