--- a/Assignment_pgm_21/pgm21.ipynb
+++ b/Assignment_pgm_21/pgm21.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6985ec73",
+   "id": "37e31b62",
    "metadata": {},
    "source": [
     "# Question2\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e33db05a",
+   "id": "87586fe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "65a8c62d",
+   "id": "00a9541e",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6e00d7a1",
+   "id": "8511c4f2",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91aa292a",
+   "id": "d84d3a8f",
    "metadata": {},
    "source": [
     "# Question3\n",
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a7381c93",
+   "id": "2bc861eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "99984909",
+   "id": "d2e7f67e",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0e16e693",
+   "id": "6c78d8b9",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d7712d5b",
+   "id": "396c2773",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "db78822f",
+   "id": "021e9b2a",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1de297ba",
+   "id": "dccbfc0a",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce727d3",
+   "id": "03ac1f14",
    "metadata": {},
    "source": [
     "# Question4\n",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f657d5eb",
+   "id": "b7dedcd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "10f4fb22",
+   "id": "c8ee8568",
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "7efc29db",
+   "id": "96fd178d",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4143e87a",
+   "id": "1fee0417",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9876d227",
+   "id": "7407f822",
    "metadata": {},
    "source": [
     "# Question5\n",
@@ -428,13 +428,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "184945e5",
+   "execution_count": 29,
+   "id": "c7d7b86c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def return_only_integer(ls)"
+    "def return_only_integer(ls):\n",
+    "    n = []\n",
+    "    for l in ls:\n",
+    "        if type(l) == int:\n",
+    "            n.append(l)\n",
+    "    return n\n",
+    "            "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "c3bf17c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 2, 16]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_only_integer([9, 2, \"space\", \"car\", \"lion\", 16]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "48bb248c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[81, 123]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_only_integer([\"hello\", 81, \"basketball\", 123, \"fox\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a71d5509",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 56, 20, 3]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_only_integer([10, \"121\", 56, 20, \"car\", 3, \"lion\"]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f344845b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "return_only_integer([\"String\",  True,  3.3,  1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "432ab883",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
