--- a/Assignment_pgm_22/pgm22.ipynb
+++ b/Assignment_pgm_22/pgm22.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fccb60c9",
+   "id": "76e47f34",
    "metadata": {},
    "source": [
     "# Question1\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "68be985f",
+   "id": "cbc25283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1e750d0f",
+   "id": "703886ce",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "30d9340f",
+   "id": "3996a8f9",
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "51968832",
+   "id": "1a532f5f",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e3221df",
+   "id": "c9ab9a01",
    "metadata": {},
    "source": [
     "# Question2\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fc9bacf4",
+   "id": "8267b7a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e588d184",
+   "id": "823d3cfc",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2d450567",
+   "id": "0ce9f715",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e9a76757",
+   "id": "2fc1160c",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "0a946194",
+   "id": "7a5c2e8e",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2efaceed",
+   "id": "66a4897c",
    "metadata": {},
    "source": [
     "# Question3\n",
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "7c9c8721",
+   "id": "fbad30e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c53ffe1c",
+   "id": "5bd884db",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "3edd6ed9",
+   "id": "6ce2e6db",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "85d336f8",
+   "id": "9c3a2b19",
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03815ba4",
+   "id": "e6cdd503",
    "metadata": {},
    "source": [
     "# Question4\n",
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "0af09f64",
+   "id": "762db065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "cf2b5e32",
+   "id": "a8e68101",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "0a4b3f8b",
+   "id": "038392f7",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "ff6294f4",
+   "id": "c66c0330",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c806b6d",
+   "id": "a1cc8494",
    "metadata": {},
    "source": [
     "# Question5\n",
@@ -389,13 +389,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "1e15ac04",
+   "execution_count": 59,
+   "id": "9b94882f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_in_order(string):\n",
-    "    \n",
+    "    if len(string)<= 0:\n",
+    "        return \"empty string is not allowed\"\n",
     "    s_sorted = sorted(string)\n",
     "    s_sorted = ''.join(s_sorted)\n",
     "    if s_sorted == string:\n",
@@ -407,8 +408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "f4649a29",
+   "execution_count": 61,
+   "id": "ba266255",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +418,7 @@
        "True"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,8 +429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "57290db9",
+   "execution_count": 62,
+   "id": "543b5bfa",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +439,7 @@
        "False"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,8 +450,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "id": "ab6289a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_in_order(\"123\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "5891d29d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_in_order(\"xyzz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "0c4e260d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'empty string is not allowed'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_in_order(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a77b2ec6",
+   "id": "64964f0d",
    "metadata": {},
    "outputs": [],
    "source": []
